<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

   <FrameLayout 
       android:id="@+id/main_content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#FF00FF"
       android:layout_above="@+id/main_layout_rg"
       ></FrameLayout>
	<RadioGroup 
	    android:id="@id/main_layout_rg"
	    android:layout_width="match_parent"
	    android:layout_height="?android:attr/actionBarSize"
	    android:layout_alignParentBottom="true"
	    android:background="#FFFF00"
	    android:orientation="horizontal">
	    <RadioButton 
	        android:id="@+id/main_rb_daipeiye"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        style="@style/main_rg_rb_style"
	        android:text="@string/daipeiye"/>
	    <RadioButton 
	        android:id="@+id/main_rb_yijiaodui"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
			style="@style/main_rg_rb_style"
	        android:text="@string/yijiaodui"/>
	    <RadioButton 
	        android:id="@+id/main_rb_kaishizhixing"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
			style="@style/main_rg_rb_style"
	        android:text="@string/kaishizhixing"/>
	    <RadioButton 
	        android:id="@+id/main_rb_zantingzhixing"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
			style="@style/main_rg_rb_style"
	        android:text="@string/zantingzhixing"/>
	    <RadioButton 
	        android:id="@+id/main_rb_zhixingwanbi"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        style="@style/main_rg_rb_style"
	        android:text="@string/zhixingwanbi"/>
	</RadioGroup>
</RelativeLayout>
